--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -5,7 +5,7 @@ on: [push, pull_request_target]
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest]
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        flake8 --ignore=E741,E501 .
+        flake8 . --exclude='*venv,build' --ignore=E741,E501
 
     - name: Upload Unit Test Results
       if: always()
