--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -5,7 +5,7 @@ on: [push, pull_request_target]
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest]
     steps:
     - name: Checkout
       uses: actions/checkout@v4
