--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -29,7 +29,7 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        flake8 --ignore=E741,E501 .
+        flake8 . --exclude='*venv,build' --ignore=E741,E501
 
     - name: Upload Unit Test Results
       if: always()
