--- a/.github/workflows/windows-and-mac.yaml
+++ b/.github/workflows/windows-and-mac.yaml
@@ -1,50 +1,49 @@
+---
 name: windows-and-mac
 
 on: [push, pull_request_target]
 
 jobs:
   windows:
-    name: windows
     runs-on: [windows-latest]
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install .
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
 
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        pip install pytest-cov
-        python -m pytest tests --junit-xml pytest.xml
+      - name: Test with pytest
+        run: |
+          pip install pytest
+          pip install pytest-cov
+          python -m pytest tests --junit-xml pytest.xml
 
   macOS:
-    name: macOS
     runs-on: [macos-latest]
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install .
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install .
 
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        pip install pytest-cov
-        python -m pytest tests --junit-xml pytest.xml
+      - name: Test with pytest
+        run: |
+          pip install pytest
+          pip install pytest-cov
+          python -m pytest tests --junit-xml pytest.xml
